2021. 4.29. Debugged _zDAEMeshList2PH3D. [zeo_ph_dae]
2021. 4.29. Modified app/makefile to define __ZEO_USE_DAE. [app]
2021. 4.29. Modified _zShape3DImportFromZTK to read a DAE file as an extention. [zeo_errmsg, zeo_shape]
2021. 4.29. Added zShape3DFReadDAE and modified _zShape3DImportFromZTK. [zeo_shape]
2021. 4.29. Changed FALSE label to FAILURE due to the use of libxml2. [zeo_col_gjk]
2021. 4.29. Added zeo_ph_dae as an extention. [zeo_ph, zeo_ph_dae]
2021. 4.29. Modified app/makefile. [app]
2021. 4.29. Reflected new specification of zeda-config-gen. [app]
2021. 4.27. Modified zPH3DFReadSTL_Bin. [zeo_ph_stl]
2021. 4.20. Accelerated conversion from STL to zPH3D by using zVec3DTreeNN. [zeo_ph_stl]
2021. 4.19. Added zVec3DArray2Tree and zVec3DTree2Array. [zeo_vec3d_tree]
2021. 4.19. Modified zVec3DTreeAdd. [zeo_vec3d_tree]
2021. 4.19. Added zVec3DTreeAddID and modified zVec3DTreeAdd. [zeo_vec3d_tree]
2021. 4.19. Added size and id members to zVec3DTree. [zeo_vec3d_tree]
2021. 4.19. Added zVec3DTreeFPrint. [zeo_vec3d_tree]
2021. 4.19. Renamed zTri3DListInsert to zTri3DListAdd. [zeo_elem_list]
2021. 4.19. Renamed zLoop3DFromArray to zLoop3DCreate. [zeo_elem_list]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DAddrListCreate. [zeo_vec3d_list, app]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DArray2AddrList and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zVec3DListFromArray to zVec3DArray2List and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zLoop3DInsert to zLoop3DAdd. [zeo_elem_list, zeo_bv_ch2]
2021. 4.19. Renamed zVec3DAddrListInsert to zVec3DAddrListAdd. [zeo_vec3d_list, zeo_elem_list, app]
2021. 4.19. Renamed zVec3DListInsert to zVec3DListAdd. [zeo_vec3d_list, zeo_vec3d_tree, zeo_pointcloud, zeo_col_gjk]
2021. 4.19. Moved zVec3DList2Tree from zeo_vec3d_list to zeo_vec3d_tree, and abolished zeo_vec3d_list_tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]