@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.7.4
+VERSION=1.7.5
 
 DEPENDENCY="zeda=1.5.0;zm=1.3.0"
 
