@@ -107,12 +107,15 @@ __EXPORT double zShape3DClosest(zShape3D *shape, zVec3D *p, zVec3D *cp);
 __EXPORT double zShape3DPointDist(zShape3D *shape, zVec3D *p);
 __EXPORT bool zShape3DPointIsInside(zShape3D *shape, zVec3D *p, bool rim);
 
+/*! \brief convert a shape to a polyhedron. */
 __EXPORT zShape3D *zShape3DToPH(zShape3D *shape);
 
 /*! \brief read a shape from a STL file. */
 __EXPORT zShape3D *zShape3DFReadSTL(FILE *fp, zShape3D *shape);
 /*! \brief read a shape from a PLY file. */
 __EXPORT zShape3D *zShape3DFReadPLY(FILE *fp, zShape3D *shape);
+/*! \brief read a shape from a OBJ file. */
+__EXPORT zShape3D *zShape3DFReadOBJ(FILE *fp, zShape3D *shape);
 #ifdef __ZEO_USE_DAE
 /*! \brief read a shape from a DAE file. */
 __EXPORT zShape3D *zShape3DFReadDAE(zShape3D *shape, char *filename);
